fix: better shift and ctrl functionality

--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@
       -ms-user-select: none;
           user-select: none;
     }
+
+    .keystate {
+      visibility:hidden;
+      margin-top:0;
+      margin-bottom:0;
+    } 
+     .keystate span {
+        background: #afafaf;
+        color:#fff;
+        border-radius:5px;
+        padding:3px 10px;
+        font-size:13px;
+    }
+
     .keyboard {
       letter-spacing: -1.5px;
       font-size: 0.9em;
@@ -86,10 +100,11 @@
   }
 
     li.active {
+      color: #3a3939;
       cursor: pointer;
       top: 3px;
       box-shadow: 0 1px 1px #000000, inset 0 0 4px #808080, inset 0 1px 0 #d1d1d1;
-      background: #396bf5;
+      background: #9f9f9f;
     }
     li:active {
       color: #3a3939; /* 727272 */
